[tool.poetry]
name = "mimir"
version = "0.1.0"
description = "NLP interpreter built with spaCy and pytextrank"
authors = ["Lee <leedavidmartina@gmail.com>"]
readme = "README.md"
packages = [
    { include = "apps/words" },  
    { include = "nlp_utils" } 
]

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.6.0"
asgiref = "3.7.2"
asttokens = "2.4.1"
blis = "0.7.11"
catalogue = "2.0.10"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudpathlib = "0.16.0"
colorama = "0.4.6"
confection = "0.1.4"
contourpy = "1.2.0"
cycler = "0.12.1"
cymem = "2.0.8"
django = "4.2.11"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}
executing = "2.0.1"
fonttools = "4.49.0"
gitdb = "4.0.11"
gitpython = "3.1.42"
graphviz = "0.20.1"
icecream = "2.1.3"
idna = "3.6"
jinja2 = "3.1.3"
kiwisolver = "1.4.5"
langcodes = "3.3.0"
markupsafe = "2.1.5"
matplotlib = "3.8.3"
murmurhash = "1.0.10"
networkx = "3.2.1"
numpy = "1.26.4"
packaging = "24.0"
pandas = "2.2.1"
pillow = "10.2.0"
preshed = "3.0.9"
pydantic = "2.6.3"
pydantic-core = "2.16.3"
pygments = "2.17.2"
pyparsing = "3.1.2"
pytextrank = "3.3.0"
python-dateutil = "2.9.0.post0"
python-decouple = "3.8"
pytz = "2024.1"
requests = "2.31.0"
scipy = "1.12.0"
six = "1.16.0"
smart-open = "6.4.0"
smmap = "5.0.1"
spacy = "3.7.4"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
sqlparse = "0.4.4"
srsly = "2.4.8"
thinc = "8.2.3"
tqdm = "4.66.2"
typer = "0.9.0"
typing-extensions = "4.10.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
wasabi = "1.1.2"
weasel = "0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
